bindings/c/whiteout_m2.h

typedef struct whiteout_M2Vertex whiteout_M2Vertex;
typedef struct whiteout_M2Bone whiteout_M2Bone;
typedef struct whiteout_M2Texture whiteout_M2Texture;
typedef struct whiteout_M2Material whiteout_M2Material;
typedef struct whiteout_M2TextureWeight whiteout_M2TextureWeight;
typedef struct whiteout_M2TextureTransform whiteout_M2TextureTransform;
typedef struct whiteout_M2AnimationTrackVector3f whiteout_M2AnimationTrackVector3f;
typedef struct whiteout_M2AnimationTrackM2CompatQuaternion whiteout_M2AnimationTrackM2CompatQuaternion;
typedef struct whiteout_M2AnimationTrackI16 whiteout_M2AnimationTrackI16;
typedef struct whiteout_M2AnimationTrackQuaternion whiteout_M2AnimationTrackQuaternion;
/* ── M2Vertex ─────────────────────────────────────────────── */

whiteout_M2Vertex* whiteout_m2_M2Vertex_new(void);
void whiteout_m2_M2Vertex_delete(whiteout_M2Vertex* self);
whiteout_Vector3f* whiteout_m2_M2Vertex_get_position(whiteout_M2Vertex* self);
void whiteout_m2_M2Vertex_set_position(whiteout_M2Vertex* self, const whiteout_Vector3f* value);
size_t whiteout_m2_M2Vertex_boneWeights_size(void);
uint8_t whiteout_m2_M2Vertex_get_boneWeights_at(const whiteout_M2Vertex* self, size_t index);
void whiteout_m2_M2Vertex_set_boneWeights_at(whiteout_M2Vertex* self, size_t index, uint8_t value);
size_t whiteout_m2_M2Vertex_boneIndices_size(void);
uint8_t whiteout_m2_M2Vertex_get_boneIndices_at(const whiteout_M2Vertex* self, size_t index);
void whiteout_m2_M2Vertex_set_boneIndices_at(whiteout_M2Vertex* self, size_t index, uint8_t value);
whiteout_Vector3f* whiteout_m2_M2Vertex_get_normal(whiteout_M2Vertex* self);
void whiteout_m2_M2Vertex_set_normal(whiteout_M2Vertex* self, const whiteout_Vector3f* value);
size_t whiteout_m2_M2Vertex_texCoords_size(void);
whiteout_Vector2f* whiteout_m2_M2Vertex_get_texCoords_at(const whiteout_M2Vertex* self, size_t index);
/* ── M2Bone ─────────────────────────────────────────────── */

whiteout_M2Bone* whiteout_m2_M2Bone_new(void);
void whiteout_m2_M2Bone_delete(whiteout_M2Bone* self);
int32_t whiteout_m2_M2Bone_get_keyBoneId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_keyBoneId(whiteout_M2Bone* self, int32_t value);
uint32_t whiteout_m2_M2Bone_get_flags(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_flags(whiteout_M2Bone* self, uint32_t value);
int16_t whiteout_m2_M2Bone_get_parentBoneId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_parentBoneId(whiteout_M2Bone* self, int16_t value);
uint16_t whiteout_m2_M2Bone_get_submeshId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_submeshId(whiteout_M2Bone* self, uint16_t value);
uint32_t whiteout_m2_M2Bone_get_boneNameCRC(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_boneNameCRC(whiteout_M2Bone* self, uint32_t value);
whiteout_M2AnimationTrackVector3f* whiteout_m2_M2Bone_get_translation(whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_translation(whiteout_M2Bone* self, const whiteout_M2AnimationTrackVector3f* value);
whiteout_M2AnimationTrackM2CompatQuaternion* whiteout_m2_M2Bone_get_rotation(whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_rotation(whiteout_M2Bone* self, const whiteout_M2AnimationTrackM2CompatQuaternion* value);
whiteout_M2AnimationTrackVector3f* whiteout_m2_M2Bone_get_scale(whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_scale(whiteout_M2Bone* self, const whiteout_M2AnimationTrackVector3f* value);
whiteout_Vector3f* whiteout_m2_M2Bone_get_pivot(whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_pivot(whiteout_M2Bone* self, const whiteout_Vector3f* value);
/* ── M2Texture ─────────────────────────────────────────────── */

whiteout_M2Texture* whiteout_m2_M2Texture_new(void);
void whiteout_m2_M2Texture_delete(whiteout_M2Texture* self);
uint32_t whiteout_m2_M2Texture_get_type(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_type(whiteout_M2Texture* self, uint32_t value);
uint32_t whiteout_m2_M2Texture_get_flags(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_flags(whiteout_M2Texture* self, uint32_t value);
whiteout_CString whiteout_m2_M2Texture_get_filename(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_filename(whiteout_M2Texture* self, const char* value);
/* ── M2Material ─────────────────────────────────────────────── */

whiteout_M2Material* whiteout_m2_M2Material_new(void);
void whiteout_m2_M2Material_delete(whiteout_M2Material* self);
uint16_t whiteout_m2_M2Material_get_flags(const whiteout_M2Material* self);
void whiteout_m2_M2Material_set_flags(whiteout_M2Material* self, uint16_t value);
uint16_t whiteout_m2_M2Material_get_blendingMode(const whiteout_M2Material* self);
void whiteout_m2_M2Material_set_blendingMode(whiteout_M2Material* self, uint16_t value);
/* ── M2TextureWeight ─────────────────────────────────────────────── */

whiteout_M2TextureWeight* whiteout_m2_M2TextureWeight_new(void);
void whiteout_m2_M2TextureWeight_delete(whiteout_M2TextureWeight* self);
whiteout_M2AnimationTrackI16* whiteout_m2_M2TextureWeight_get_weight(whiteout_M2TextureWeight* self);
void whiteout_m2_M2TextureWeight_set_weight(whiteout_M2TextureWeight* self, const whiteout_M2AnimationTrackI16* value);
/* ── M2TextureTransform ─────────────────────────────────────────────── */

whiteout_M2TextureTransform* whiteout_m2_M2TextureTransform_new(void);
void whiteout_m2_M2TextureTransform_delete(whiteout_M2TextureTransform* self);
whiteout_M2AnimationTrackVector3f* whiteout_m2_M2TextureTransform_get_translation(whiteout_M2TextureTransform* self);
void whiteout_m2_M2TextureTransform_set_translation(whiteout_M2TextureTransform* self, const whiteout_M2AnimationTrackVector3f* value);
whiteout_M2AnimationTrackQuaternion* whiteout_m2_M2TextureTransform_get_rotation(whiteout_M2TextureTransform* self);
void whiteout_m2_M2TextureTransform_set_rotation(whiteout_M2TextureTransform* self, const whiteout_M2AnimationTrackQuaternion* value);
whiteout_M2AnimationTrackVector3f* whiteout_m2_M2TextureTransform_get_scaling(whiteout_M2TextureTransform* self);
void whiteout_m2_M2TextureTransform_set_scaling(whiteout_M2TextureTransform* self, const whiteout_M2AnimationTrackVector3f* value);