bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2Vertex --
    public static final MethodHandle whiteout_m2_M2Vertex_new = find(
        "whiteout_m2_M2Vertex_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_delete = find(
        "whiteout_m2_M2Vertex_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_get_position = find("whiteout_m2_M2Vertex_get_position", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_set_position = find("whiteout_m2_M2Vertex_set_position", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_boneWeights_size = find("whiteout_m2_M2Vertex_boneWeights_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2Vertex_get_boneWeights_at = find("whiteout_m2_M2Vertex_get_boneWeights_at", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2Vertex_set_boneWeights_at = find("whiteout_m2_M2Vertex_set_boneWeights_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2Vertex_boneIndices_size = find("whiteout_m2_M2Vertex_boneIndices_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2Vertex_get_boneIndices_at = find("whiteout_m2_M2Vertex_get_boneIndices_at", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2Vertex_set_boneIndices_at = find("whiteout_m2_M2Vertex_set_boneIndices_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2Vertex_get_normal = find("whiteout_m2_M2Vertex_get_normal", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_set_normal = find("whiteout_m2_M2Vertex_set_normal", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Vertex_texCoords_size = find("whiteout_m2_M2Vertex_texCoords_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2Vertex_get_texCoords_at = find("whiteout_m2_M2Vertex_get_texCoords_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- M2Bone --
    public static final MethodHandle whiteout_m2_M2Bone_new = find(
        "whiteout_m2_M2Bone_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_delete = find(
        "whiteout_m2_M2Bone_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_get_keyBoneId = find("whiteout_m2_M2Bone_get_keyBoneId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_keyBoneId = find("whiteout_m2_M2Bone_set_keyBoneId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Bone_get_flags = find("whiteout_m2_M2Bone_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_flags = find("whiteout_m2_M2Bone_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Bone_get_parentBoneId = find("whiteout_m2_M2Bone_get_parentBoneId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_parentBoneId = find("whiteout_m2_M2Bone_set_parentBoneId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Bone_get_submeshId = find("whiteout_m2_M2Bone_get_submeshId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_submeshId = find("whiteout_m2_M2Bone_set_submeshId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Bone_get_boneNameCRC = find("whiteout_m2_M2Bone_get_boneNameCRC", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_boneNameCRC = find("whiteout_m2_M2Bone_set_boneNameCRC", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Bone_get_translation = find("whiteout_m2_M2Bone_get_translation", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_translation = find("whiteout_m2_M2Bone_set_translation", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_get_rotation = find("whiteout_m2_M2Bone_get_rotation", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_rotation = find("whiteout_m2_M2Bone_set_rotation", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_get_scale = find("whiteout_m2_M2Bone_get_scale", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_scale = find("whiteout_m2_M2Bone_set_scale", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_get_pivot = find("whiteout_m2_M2Bone_get_pivot", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Bone_set_pivot = find("whiteout_m2_M2Bone_set_pivot", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- M2Texture --
    public static final MethodHandle whiteout_m2_M2Texture_new = find(
        "whiteout_m2_M2Texture_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Texture_delete = find(
        "whiteout_m2_M2Texture_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Texture_get_type = find("whiteout_m2_M2Texture_get_type", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Texture_set_type = find("whiteout_m2_M2Texture_set_type", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Texture_get_flags = find("whiteout_m2_M2Texture_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Texture_set_flags = find("whiteout_m2_M2Texture_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2Texture_get_filename = find("whiteout_m2_M2Texture_get_filename", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Texture_set_filename = find("whiteout_m2_M2Texture_set_filename", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- M2Material --
    public static final MethodHandle whiteout_m2_M2Material_new = find(
        "whiteout_m2_M2Material_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Material_delete = find(
        "whiteout_m2_M2Material_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Material_get_flags = find("whiteout_m2_M2Material_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Material_set_flags = find("whiteout_m2_M2Material_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Material_get_blendingMode = find("whiteout_m2_M2Material_get_blendingMode", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Material_set_blendingMode = find("whiteout_m2_M2Material_set_blendingMode", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));

    // -- M2TextureWeight --
    public static final MethodHandle whiteout_m2_M2TextureWeight_new = find(
        "whiteout_m2_M2TextureWeight_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureWeight_delete = find(
        "whiteout_m2_M2TextureWeight_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureWeight_get_weight = find("whiteout_m2_M2TextureWeight_get_weight", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureWeight_set_weight = find("whiteout_m2_M2TextureWeight_set_weight", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- M2TextureTransform --
    public static final MethodHandle whiteout_m2_M2TextureTransform_new = find(
        "whiteout_m2_M2TextureTransform_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_delete = find(
        "whiteout_m2_M2TextureTransform_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_get_translation = find("whiteout_m2_M2TextureTransform_get_translation", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_set_translation = find("whiteout_m2_M2TextureTransform_set_translation", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_get_rotation = find("whiteout_m2_M2TextureTransform_get_rotation", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_set_rotation = find("whiteout_m2_M2TextureTransform_set_rotation", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_get_scaling = find("whiteout_m2_M2TextureTransform_get_scaling", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TextureTransform_set_scaling = find("whiteout_m2_M2TextureTransform_set_scaling", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
